# sg2Pro

./: .gitignore  CMakeLists.txt  README.md  newmain.test.cpp
mocks/: xc.h
sg2Pro.X/: EEPROMfunc.c  EEPROMfunc.h  EngBinSt.c  EngBinSt.h  PinsCheck.c  PinsCheck.h  ResetReasons.h  code.c  funclist  i2c.c  i2c.h  i2c_p16f690.h  newmain.c  newmain1.c
sg2Pro.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations-fedor-pc.xml  configurations.xml  project.xml
sg2Pro.X/nbproject/private/: SuppressibleMessageMemo.properties  configurations-em10.xml  configurations-fedor-pc.xml  configurations.xml  private.xml
